// file: proto/gcommon/v1/queue/api/list_topics_response.proto
// version: 1.1.0
// Response containing list of available topics

edition = "2023";

package gcommon.v1.queue.api;

import "google/protobuf/go_features.proto";
import "proto/gcommon/v1/queue/messages/topic_info.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "gcommon.v1.queue.api";

message ListTopicsResponse {
  // List of topics
  repeated TopicInfo topics = 1;

  // Next page token
  string next_page_token = 2;

  // Total count
  int32 total_count = 3;
}

// ListTopicsResponse returns a list of available topics
// This file needs proper implementation
